--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,21 @@ body
     margin: 0;
     padding: 0;
 }
+ #cabecera
+ {
+     background-color: #33a;
+     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
+     color:white;
+     font-weight: bold;
+     margin: 0;
+     padding: 0,5cm;
+ }
+ #cabecera #tagline
+ {
+     padding: 0 0 0 1cm;
+     font-weight: normal;
+     font-size: 0.5cm;
+ }
 #container
 {
     width: 70%;
@@ -19,4 +34,8 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+
 }
