--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: Courier;
+    font-family: arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -10,11 +10,11 @@ body
  #cabecera
  {
      background-color: #33a;
-     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
+     box-shadow: 0px 6px 40px 0px rgba(0,0,0,0.75);
      color:white;
      font-weight: bold;
      margin: 0;
-     padding: 0,5cm;
+     padding: 0,8cm;
  }
  #cabecera #tagline
  {
